tests/snapshots/run_wpt_conformance__litert_reduceMin_float16_4D_tensor_options_axes_with_options_keepDimensions_false.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
reduce_min.https.any.js reduceMin float16 4D tensor options.axes with options.keepDimensions=false, litert
 Failed to dispatch graph: LiteRT status error: code=3

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    reduceMinInput: f16[2, 2, 2, 3];
  }

  nodes {
    [reduceMinOutput] = reduceMin(reduceMinInput, axes=[1, 3], keepDimensions=false, label="");
  }

  outputs { reduceMinOutput; }
}
