tests/snapshots/run_wpt_conformance__litert_reduceMin_float32_0D_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
reduce_min.https.any.js reduceMin float32 0D tensor default options, litert
 reduce_min :: reduceMin float32 0D tensor default options: index 0: actual=0.000000000000000000000000000000000000000000001 expected=-58.761955 ulp=1114311743 tolerance=0
  inputs: reduceMinInput: [-58.76195526123047]
  expected reduceMinOutput: [-58.761955]
  actual reduceMinOutput: [0.000000000000000000000000000000000000000000001]

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    reduceMinInput: f32[];
  }

  nodes {
    [reduceMinOutput] = reduceMin(reduceMinInput, axes=null, keepDimensions=false, label="");
  }

  outputs { reduceMinOutput; }
}
